@@ -46,6 +46,8 @@ extern int target_flags;
 	  builtin_define ("__PIC__");		\
 	  builtin_define ("__pic__");		\
 	}					\
+      if (TARGET_ID_SHARED_LIBRARY)		\
+	builtin_define ("__ID_SHARED_LIB__");	\
     }                                           \
   while (0)
 #endif
