@@ -2,6 +2,10 @@
 
 	* config/bfin/lib1funcs.asm (___umodsi3): Use stack to save contents
 	of RETS.
+	* config/bfin/bfin.h (TARGET_CPU_CPP_BUILTINS): If
+	TARGET_ID_SHARED_LIBRARY, define __ID_SHARED_LIB__.
+	* config/bfin/crti.S: Use it instead of __PIC__.
+	* config/bfin/crtn.S: Likewise.
 
 2006-03-13  Eric Botcazou  <ebotcazou@adacore.com>
 
